--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /AmazonPriceTracker/Projecto Compilado/net6.0
 /Compiled
 /AmazonPriceTracker/bin/Debug/net8.0
+/.vs/VirtualStoresPriceTracker/FileContentIndex
+/.vs/VirtualStoresPriceTracker/v17
