Close all chromium processes before a new loop

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /.vs/VirtualStoresPriceTracker/v17
 /.vs/VirtualStoresPriceTracker/v17/.suo
 /.vs/VirtualStoresPriceTracker/v17/DocumentLayout.json
+/.vs/VirtualStoresPriceTracker/DesignTimeBuild/.dtbcache.v2
