--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /AmazonPriceTracker/bin/Debug/net8.0
 /.vs/VirtualStoresPriceTracker/FileContentIndex
 /.vs/VirtualStoresPriceTracker/v17
+*.v2
+/.vs/VirtualStoresPriceTracker/v17/.suo
