--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 /Shared/obj/Debug/net8.0
 /Shared/obj
 /VirtualStorePriceTracker/bin/Release/TestScreenShots
+/.vs/VirtualStoresPriceTracker/copilot-chat/38f70640/sessions
+/.vs/VirtualStoresPriceTracker/CopilotIndices/17.12.38.29086
