--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 /VirtualStorePriceTracker/bin/Release/TestScreenShots
 /.vs/VirtualStoresPriceTracker/copilot-chat/38f70640/sessions
 /.vs/VirtualStoresPriceTracker/CopilotIndices/17.12.38.29086
+/.vs/VirtualStoresPriceTracker/CopilotIndices/17.12.53.23981
