--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /.vs/VirtualStoresPriceTracker/copilot-chat/38f70640/sessions
 /.vs/VirtualStoresPriceTracker/CopilotIndices/17.12.38.29086
 /.vs/VirtualStoresPriceTracker/CopilotIndices/17.12.53.23981
+/VirtualStorePriceTracker/email_credentials.json
