--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /VirtualStorePriceTracker/email_credentials.json
 /VirtualStorePriceTracker/bfg.jar
 /bfg.jar
+/.vs/VirtualStoresPriceTracker/CopilotIndices/17.14.719.50355
